--- a/src/components/Header/Card/Card.scss
+++ b/src/components/Header/Card/Card.scss
@@ -1,12 +1,30 @@
 :root {
-    --reaction: red;
-    --memory: yellow;
-    --verbal: green;
+
+  //Primary
+  --LightRed: hsl(0, 100%, 67%)
+  --OrangeyYellow: hsl(39, 100%, 56%)
+  --GreenTeal: hsl(166, 100%, 37%)
+  --CobaltBlue: hsl(234, 85%, 45%)
+  
+  //Neutral
+    --White: hsl(0, 0%, 100%);
+    --PaleBlue: hsl(221, 100%, 96%);
+    --LightLavender: hsl(241, 100%, 89%);
+    --VioletBlue: hsla(256, 72%, 46%, 1);
+
+
+    //Gradients: (Background)
+    --LightSlateBlue: hsl(252, 100%, 67%);
+    --LightRoyalBlue: hsl(241, 81%, 54%);
+
+    //Gradients (Circle)
+    --PersianBlue: hsla(241, 72%, 46%, 0);
+    --DarkGrayBlue: hsl(224, 30%, 27%);
 }
 
 .Card {
-  width: 20em;
-  height: 90vh;
+  width: 23.4375rem;
+  height: 50.5rem;
   margin: auto;
   background-color: white;
   color: #222;
@@ -14,47 +32,80 @@
   flex-flow: column wrap;
   align-items: center;
 
+  .cosa {
+    background-color: hsl(252, 100%, 67%);
+    color: hsl(241, 81%, 54%);
+  }
+
   > header {
-    background-color: blue;
+    
+    background: rgb(17,37,212);
+    background: linear-gradient(0deg, rgba(17,37,212,1) 35%, rgba(120,86,255,1) 100%);
     width:100%;
+    height: 22.375rem;
     text-align: center;
-    border-radius: 0 0 1em 1em;
+    border-radius: 0 0 1.875rem 1.875rem;
     color: white;
     display: inherit;
     flex-flow: inherit;
     margin: 0;
     align-items: center;
+
   }
 
   &-number {
-    background-color: #222;
+    background: rgb(40,18,104);
+    background: linear-gradient(0deg, rgba(40,18,104,1) 35%, rgba(77,61,242,1) 100%);
     display: block;
     cursor: pointer;
-    width: 4em;
-    height: 4em;
-    border-radius: 5rem;
-    line-height: 4;
-    position: relative;
+    width: 8.4375rem;
+    height: 8.4375rem;
+    border-radius: 15rem;
+    //line-height: 2.5;
+    font-size: 3.5rem;
+    padding-top: 1.5rem;
+    font-weight: 800;
 
     span {
         font-size: 0.8rem;
         display: block;
-        position:absolute;
-        bottom: 1px;
-        left: 28px;
     }
     
   }
-}
 
-
-.Button {
-    background-color: #222;
-    color: whitesmoke;
-    border-radius: 2rem;
-    border: none;
-    padding: 0.5rem 2rem;
+  .DataTable {
     width: 100%;
     display: flex;
-    flex: 1;
+    flex-flow: column nowrap;
+    align-items: center;
+  }
+
+  .Data {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    padding: .875rem 1.875rem;
+    gap: 0.5rem;
+    display: flex;
+    flex-flow: column;
+  }
+  .Data-item {
+    border-radius: .625rem;
+    background-color: rgb(138, 138, 138);
+    width: 100%;
+    display: flex;
+    padding: 1rem;
+    box-sizing: border-box;
+  }
+  .Button {
+      background-color: #222;
+      color: whitesmoke;
+      border-radius: 2rem;
+      border: none;
+      padding: 0.5rem 2rem;
+      width: 100%;
+      display: flex;
+      flex: 1;
+  }
 }
+
